--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     </div>
                 </div>
                 <button class="btn" onclick="calculateRoute()">🔍 Calcular Rota e Comparar Modais</button>
-                <div id="map"></div>
+                <!-- <div id="map"></div> -->
                 <div id="route-info" style="margin-top: 15px;"></div>
             </div>
 
